Try another approach to merge in Elm (it still depends on the order)

--- a/experiments/merge/index.html
+++ b/experiments/merge/index.html
@@ -49,7 +49,7 @@
         );
       }
 
-      .tile-1-4 {
+      .tile-1-4, .tile-move-to-1-4 {
         transform: translate(
           calc(4 * var(--gap) + 3 * var(--width)),
           var(--gap)
