--- a/experiments/merge/index.html
+++ b/experiments/merge/index.html
@@ -15,12 +15,14 @@
         --width: 100px;
         --height: 100px;
         --gap: 20px;
-        --duration: 2000ms;
+        --duration: 100ms; /* Change this to adjust the animation's speed. */
+        /* Useful for debugging purposes. */
       }
 
-      .row {
+      .grid {
+        position: relative;
         width: calc(5 * var(--gap) + 4 * var(--width));
-        height: calc(2 * var(--gap) + var(--height));
+        height: calc(5 * var(--gap) + 4 * var(--height));
         background-color: grey;
       }
 
@@ -34,25 +36,115 @@
         transition: transform var(--duration) ease-in-out;
       }
 
-      .tile__inner {
-        background-color: green;
+      .tile-1-1 {
+        transform: translate(
+          calc(1 * var(--gap) + 0 * var(--width)),
+          calc(1 * var(--gap) + 0 * var(--height))
+        );
       }
 
-      .tile-1-1 {
-        transform: translate(var(--gap), var(--gap));
+      .tile-1-2 {
+        transform: translate(
+          calc(2 * var(--gap) + 1 * var(--width)),
+          calc(1 * var(--gap) + 0 * var(--height))
+        );
       }
 
       .tile-1-3 {
         transform: translate(
           calc(3 * var(--gap) + 2 * var(--width)),
-          var(--gap)
+          calc(1 * var(--gap) + 0 * var(--height))
         );
       }
 
-      .tile-1-4, .tile-move-to-1-4 {
+      .tile-1-4 {
         transform: translate(
           calc(4 * var(--gap) + 3 * var(--width)),
-          var(--gap)
+          calc(1 * var(--gap) + 0 * var(--height))
+        );
+      }
+
+      .tile-2-1 {
+        transform: translate(
+          calc(1 * var(--gap) + 0 * var(--width)),
+          calc(2 * var(--gap) + 1 * var(--height))
+        );
+      }
+
+      .tile-2-2 {
+        transform: translate(
+          calc(2 * var(--gap) + 1 * var(--width)),
+          calc(2 * var(--gap) + 1 * var(--height))
+        );
+      }
+
+      .tile-2-3 {
+        transform: translate(
+          calc(3 * var(--gap) + 2 * var(--width)),
+          calc(2 * var(--gap) + 1 * var(--height))
+        );
+      }
+
+      .tile-2-4 {
+        transform: translate(
+          calc(4 * var(--gap) + 3 * var(--width)),
+          calc(2 * var(--gap) + 1 * var(--height))
+        );
+      }
+
+      .tile-3-1 {
+        transform: translate(
+          calc(1 * var(--gap) + 0 * var(--width)),
+          calc(3 * var(--gap) + 2 * var(--height))
+        );
+      }
+
+      .tile-3-2 {
+        transform: translate(
+          calc(2 * var(--gap) + 1 * var(--width)),
+          calc(3 * var(--gap) + 2 * var(--height))
+        );
+      }
+
+      .tile-3-3 {
+        transform: translate(
+          calc(3 * var(--gap) + 2 * var(--width)),
+          calc(3 * var(--gap) + 2 * var(--height))
+        );
+      }
+
+      .tile-3-4 {
+        transform: translate(
+          calc(4 * var(--gap) + 3 * var(--width)),
+          calc(3 * var(--gap) + 2 * var(--height))
+        );
+      }
+
+      .tile-4-1 {
+        transform: translate(
+          calc(1 * var(--gap) + 0 * var(--width)),
+          calc(4 * var(--gap) + 3 * var(--height))
+        );
+      }
+
+      .tile-4-2 {
+        transform: translate(
+          calc(2 * var(--gap) + 1 * var(--width)),
+          calc(4 * var(--gap) + 3 * var(--height))
+        );
+      }
+
+      .tile-4-3 {
+        transform: translate(
+          calc(3 * var(--gap) + 2 * var(--width)),
+          calc(4 * var(--gap) + 3 * var(--height))
+        );
+      }
+
+      .tile-4-4 {
+        transform: translate(
+          calc(4 * var(--gap) + 3 * var(--width)),
+          calc(4 * var(--gap) + 3 * var(--height))
         );
       }
 
@@ -88,11 +180,11 @@
       }
 
       .tile--new .tile__inner {
-        animation: appear 200ms ease 100ms;
+        animation: appear calc(2 * var(--duration)) ease var(--duration);
         animation-fill-mode: backwards;
       }
 
-      .tile--merged .tile__inner {
+      .tile--composite .tile__inner {
         animation: pop calc(2 * var(--duration)) var(--duration) ease;
         animation-fill-mode: backwards;
       }
