Organize the fonts

--- a/prototype/tile.html
+++ b/prototype/tile.html
@@ -8,6 +8,9 @@
     <link rel="stylesheet" href="/index.css">
   </head>
   <body>
+    <h1>This is a heading</h1>
+    <p>This is some text.</p>
+    <p>The brown fox <strong>jumped</strong> over the <em>fence</em>.</p>
     <div class="tile">Tile</div>
   </body>
 </html>
