--- a/prototype/main.html
+++ b/prototype/main.html
@@ -11,10 +11,10 @@
         margin: 80px 0;
       }
 
-      .main {
+      /* .main {
         width: 500px;
         margin: 0 auto;
-      }
+      } */
 
       .main__introduction {
         margin-bottom: 40px;
@@ -33,8 +33,8 @@
             <h1 class="title">2048</h1>
           </div>
           <div class="header__scores">
-            <div class="score-container">
-              <div class="score-container__score">
+            <div class="score-card">
+              <div class="score-card__score">
                 <div class="score">
                   <h2 class="score__title">Score</h2>
                   <div class="score__total">
@@ -42,7 +42,7 @@
                   </div>
                 </div>
               </div>
-              <div class="score-container__score">
+              <div class="score-card__score">
                 <div class="score">
                   <h2 class="score__title">Best</h2>
                   <div class="score__total">
