--- a/prototype/main.html
+++ b/prototype/main.html
@@ -10,19 +10,6 @@
       body {
         margin: 80px 0;
       }
-
-      /* .main {
-        width: 500px;
-        margin: 0 auto;
-      } */
-
-      .main__introduction {
-        margin-bottom: 40px;
-      }
-
-      .main__footer {
-        margin-top: 50px;
-      }
     </style>
   </head>
   <body>
@@ -57,7 +44,7 @@
       <div class="main__introduction">
         <div class="introduction">
           <div class="introduction__item">
-            <p class="p">Join the numbers and get to the <strong>2048 tile!</strong></p>
+            <p class="p">Join the numbers and get to the <strong>2048&nbsp;tile!</strong></p>
           </div>
           <div class="introduction__item">
             <button class="button">New Game</button>
