Refactor the prototype

--- a/prototype/introduction.html
+++ b/prototype/introduction.html
@@ -24,7 +24,7 @@
     <div class="box">
       <div class="introduction">
         <div class="introduction__item">
-          <p class="p">Join the numbers and get to the <strong>2048&nbsp;tile!</strong></p>
+          <p class="m0">Join the numbers and get to the <strong class="nowrap">2048 tile!</strong></p>
         </div>
         <div class="introduction__item">
           <button class="button">New Game</button>
