--- a/prototype/paragraph.html
+++ b/prototype/paragraph.html
@@ -16,23 +16,23 @@
     <div class="box">
       <h1>Paragraph</h1>
 
-      <p class="p">Join the numbers and get to the <strong>2048 tile!</strong></p>
+      <p class="m0">Join the numbers and get to the <strong class="nowrap">2048 tile!</strong></p>
 
       <hr class="separator">
 
-      <p class="p">
-        <strong class="p__important">How to play:</strong> Use your <strong>arrow keys</strong> to move the tiles. When two tiles with the same number touch, they <strong>merge into one!</strong>
+      <p class="m0">
+        <strong class="uppercase">How to play:</strong> Use your <strong>arrow keys</strong> to move the tiles. When two tiles with the same number touch, they <strong>merge into one!</strong>
       </p>
 
       <hr class="separator">
 
-      <p class="p">
-        <strong class="p__important">Note:</strong> This site is an <a href="https://elm-lang.org/" target="_blank">Elm</a> clone of the original 2048 JavaScript game that was created by <a href="https://github.com/gabrielecirulli" target="_blank">Gabriele Cirulli</a>.
+      <p class="m0">
+        <strong class="uppercase">Note:</strong> This site is an <a href="https://elm-lang.org/" target="_blank">Elm</a> clone of the original 2048 JavaScript game that was created by <a href="https://github.com/gabrielecirulli" target="_blank">Gabriele Cirulli</a>.
       </p>
 
       <hr class="separator">
 
-      <p class="p">
+      <p class="m0">
         Developed by <a href="https://github.com/dwayne" target="_blank">Dwayne Crooks</a>. 2048 is based on <a href="https://itunes.apple.com/us/app/1024!/id823499224" target="_blank">1024 by Veewo Studio</a> and conceptually similar to <a href="http://asherv.com/threes/" target="_blank">Threes by Asher Vollmer</a>.
       </p>
     </div>
