--- a/experiments/appear.html
+++ b/experiments/appear.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
-    <title>Move</title>
+    <title>Appear</title>
 
     <style>
       * {
