Add support for movement with the arrow keys
In addition, remove the movement buttons since they are
no longer needed.

--- a/html/index.html
+++ b/html/index.html
@@ -6,13 +6,8 @@
 
     <title>Elm 2048</title>
     <link rel="stylesheet" href="/index.css">
-    <style>
-      body {
-        margin: 80px 0;
-      }
-    </style>
   </head>
-  <body>
+  <body class="body">
     <div id="app"></div>
     <script src="/app.js"></script>
     <script>
